Fix for #767 jumpy appbar/body becuse of the scroll lock

--- a/src/MudBlazor/Styles/utilities/_scroll.scss
+++ b/src/MudBlazor/Styles/utilities/_scroll.scss
@@ -1,13 +1,36 @@
-﻿.scroll-locked {
-    height: 100%;
-    overflow-y: hidden;
-    padding-right: 8px; //the width of scroll-bar
+﻿.scroll-locked{
+    padding-right: 8px;
+    overflow: hidden;
+
+    .mud-layout {
+        .mud-appbar {
+            padding-right: 8px;
+        }
+
+        .mud-main-content {
+            .mud-scroll-to-top {
+                padding-right: 8px;
+            }
+        }
+    }
 }
 
-.scroll-locked-dialog {
-    height: 100%;
-    overflow-y: hidden;
-    padding-right: 8px; //the width of scroll-bar
+@-moz-document url-prefix() {
+    .scroll-locked {
+        padding-right: 17px; //the width of scroll-bar in firefox
+
+        .mud-layout {
+            .mud-appbar {
+                padding-right: 17px;
+            }
+
+            .mud-main-content {
+                .mud-scroll-to-top {
+                    padding-right: 17px;
+                }
+            }
+        }
+    }
 }
 
 .mud-scroll-to-top {
